fix windows scrollbars

--- a/style.css
+++ b/style.css
@@ -240,9 +240,7 @@ h1 {
    height: 254px;
    overflow-y: scroll;
    font-size: 15px;
-   ::-webkit-scrollbar {
-    display: none;
-}
+
 
    counter-reset: numbers 0;
 }
